Updated CSS and added a new style ("gutter") to fix the broken general comment and reply to comment form display on IE6 and IE7.
References #1148

git-svn-id: http://svn.topazproject.org/svn/head@7436 48088309-b40f-0410-b149-b14953253675

--- a/ambra/webapp/src/main/webapp/css/annotation.css
+++ b/ambra/webapp/src/main/webapp/css/annotation.css
@@ -72,6 +72,15 @@ div#cmtContainer.retractionCssStyle div#viewCmtDetail,
 div#cmtContainer.frmlcrctn div#viewCmtDetail,
 div#cmtContainer.minrcrctn div#viewCmtDetail { border-top-color:#f00; border-bottom-color:#f00; }
 
+div#cmtContainer div#viewCIStatement { padding-top:0; }
+div#cmtContainer div#viewCIStatement div.cis,
+div.citation div.cis,  /* div.citation targets cis in formal corrections, just in case */
+blockquote div.cis { border-top:1px solid #ccc; }
+div.citation div.cis { margin-top: 5px; padding-top:5px; }
+div#cmtContainer div#viewCIStatement div.cis { padding-top: 5px; font-size:0.9em; }
+blockquote div.cis { line-height:1.5em; padding:5px 0; }
+
+
 div.dialog .posting.pane{ background: none; }
 div.comment div.comment{ margin: 10px 0; padding-left: 20px; border-left: 4px solid #999; background-color: #eee;}
 div.comment .comment h6{ background: transparent; color: #333; padding: 4px 0 0 0; }
@@ -134,7 +143,7 @@ div.dijitTooltipContainer { border:0px; }
 .dialog .text label,
 .dialog legend,
 .post legend	{ display: none; }
-.pane .error	{ padding:5px; border:1px solid #c00; background-color: #fff; font-style: normal; }
+.pane .error	{ margin-bottom:5px; padding:5px; border:1px solid #c00; background-color: #fff; font-style: normal; }
 
 .dialog .response { width: 100%; height: 8em; overflow: auto; }
 .dialog .submit input { display: inline;}
@@ -252,19 +261,20 @@ div.annotate div.posting textarea,
 div.annotate div.posting input.title  { margin:5px 0; width:23.7em; }
 div.response textarea,
 div.response input.title { width:33em; }
+div.posting td.coi { vertical-align:bottom; }
 div.posting td.coi textarea { height:5em; }
 div.posting td.coi ul li { list-style-type:none; }
 div.posting td.coi ul li:first-child { margin-bottom:1em; }
 div.posting td.coi ul li label { line-height:1.5em; }
 div.posting td.coi ul li > label { display:block; } /* hidden from IE6 */
 div.posting td.coi ul li label input { float:left; margin-right:0.5em; margin-bottom:1em; }
+div.response td { width:50%; }
+div.response td.gutter { width:1%; }
 div.response td.coi ul li label input { margin-bottom:0; }
-div.response table.layout td.coi { vertical-align:bottom; }
 div.annotate div.instructions ol li { list-style-position:inside; }
-div.response table.layout {width:68em; margin:0 5px; }
-div.response table.layout td { width:5px; } /* compresses table cells around content in IE */
+div.response table.layout { width:69em; margin:0 5px; }
 table.layout td.buttons { text-align:right; vertical-align:bottom; }
-.buttons input { color:#333; margin:0 5px; }
+.buttons input { color:#333; margin:0 0 0 5px; }
 .buttons input.primary { font-weight:bold; }
 
 .toolbar			{ background: url(../images/toolbar_bg.gif) repeat-x 20px; padding: 5px; border: 1px solid #ccc; border-width: 0 0 2px 2px; margin: 0}
